--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div id="move-history" class="move-history">
     </div>
 </div>
+<input type="file" id="file-selector" multiple>cp
 <script src="lib/jquery/jquery-3.2.1.min.js"></script>
 <script src="lib/chessboardjs/js/chess.js"></script>
 <script src="lib/chessboardjs/js/chessboard-0.3.0.js"></script>
